--- a/src/package.json
+++ b/src/package.json
@@ -9,48 +9,49 @@
   },
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
-    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
-    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
-    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.523.0",
-    "motion": "^12.23.25",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-easy-crop": "^5.5.3",
+    "motion": "^12.25.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-easy-crop": "^5.5.6",
     "react-leaflet": "^5.0.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.6.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1",
-    "zod": "^4.1.13"
+    "tailwind-merge": "^3.4.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@inertiajs/react": "^2.3.2",
-    "@tailwindcss/vite": "^4.1.10",
-    "@types/leaflet": "^1.9.20",
+    "@inertiajs/react": "^2.3.7",
+    "@tailwindcss/vite": "^4.1.18",
+    "@types/leaflet": "^1.9.21",
     "@types/leaflet-geosearch": "^2.7.1",
-    "@types/node": "^18.19.118",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "axios": "^1.8.2",
-    "concurrently": "^9.0.1",
-    "laravel-echo": "^2.1.6",
-    "laravel-vite-plugin": "^1.2.0",
+    "@types/node": "^18.19.130",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.7.0",
+    "axios": "^1.13.2",
+    "concurrently": "^9.2.1",
+    "laravel-echo": "^2.2.7",
+    "laravel-vite-plugin": "^1.3.0",
     "pusher-js": "^8.4.0",
     "tailwindcss": "^4.1.10",
-    "tw-animate-css": "^1.3.4",
-    "typescript": "^5.8.2",
-    "vite": "^6.0.11"
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.3",
+    "vite": "^6.4.1"
   }
 }
